build.gradle: specify CMS garbage collector, simplify