@@ -1,5 +1,6 @@
 apply plugin: 'java'
 
+// select a source-code option
 //sourceCompatibility = '1.6'
 //sourceCompatibility = '1.7'
 sourceCompatibility = '1.8'
@@ -15,13 +16,14 @@ gradle.projectsEvaluated {
         classpath sourceSets.main.runtimeClasspath
         //debug true
         enableAssertions true
+        jvmArgs '-XX:+UseConcMarkSweepGC'
     }
 }
 
-// select one version of the Engine
-//ext.jmonkeyengineVersion = '3.1.0-stable'
-ext.jmonkeyengineVersion = '3.2.0-stable'
-//ext.jmonkeyengineVersion = '3.2.0-SNAPSHOT'
+// select a version of the Engine
+//ext.jmonkeyengineVersion = '3.1.0-stable' // from jcenter
+ext.jmonkeyengineVersion = '3.2.0-stable' // from jcenter
+//ext.jmonkeyengineVersion = '3.2.0-SNAPSHOT' // from mavenLocal
 
 // NetBeans will automatically add "run" and "debug" tasks relying on the
 // "mainClass" property. You may however define the property prior executing
@@ -35,11 +37,11 @@ if (!hasProperty('mainClass')) {
 }
 
 repositories {
+    //mavenLocal()
     jcenter()
-    maven { url 'http://nifty-gui.sourceforge.net/nifty-maven-repo' }
-    maven { url 'https://dl.bintray.com/stephengold/org.jmonkeyengine' }
-    mavenCentral()
-    mavenLocal()
+    //maven { url 'http://nifty-gui.sourceforge.net/nifty-maven-repo' }
+    //maven { url 'https://dl.bintray.com/stephengold/org.jmonkeyengine' }
+    //mavenCentral()
     // You may define additional repositories, or even remove "mavenCentral()".
     // Read more about repositories here:
     //   https://docs.gradle.org/current/userguide/dependency_management.html#sec:repositories
@@ -49,26 +51,26 @@ dependencies {
     // You can read more about how to add dependencies here:
     //   https://docs.gradle.org/current/userguide/dependency_management.html#sec:how_to_declare_your_dependencies
 
-    // from jcenter repositories:
+    // from jcenter (or mavenLocal) repositories:
     compile "org.jmonkeyengine:jme3-core:${jmonkeyengineVersion}"
-    compile "org.jmonkeyengine:jme3-blender:${jmonkeyengineVersion}"
-    compile "org.jmonkeyengine:jme3-bullet:${jmonkeyengineVersion}"
-    compile "org.jmonkeyengine:jme3-bullet-native:${jmonkeyengineVersion}"
-    compile "org.jmonkeyengine:jme3-desktop:${jmonkeyengineVersion}"
-    compile "org.jmonkeyengine:jme3-effects:${jmonkeyengineVersion}"
-    compile "org.jmonkeyengine:jme3-jogg:${jmonkeyengineVersion}"
-    compile "org.jmonkeyengine:jme3-jogl:${jmonkeyengineVersion}"
-    compile "org.jmonkeyengine:jme3-networking:${jmonkeyengineVersion}"
-    compile "org.jmonkeyengine:jme3-niftygui:${jmonkeyengineVersion}"
-    compile "org.jmonkeyengine:jme3-plugins:${jmonkeyengineVersion}"
-    compile "org.jmonkeyengine:jme3-terrain:${jmonkeyengineVersion}"
+    runtime "org.jmonkeyengine:jme3-blender:${jmonkeyengineVersion}"
+    //compile "org.jmonkeyengine:jme3-bullet:${jmonkeyengineVersion}"
+    //runtime "org.jmonkeyengine:jme3-bullet-native:${jmonkeyengineVersion}"
+    runtime "org.jmonkeyengine:jme3-desktop:${jmonkeyengineVersion}"
+    //compile "org.jmonkeyengine:jme3-effects:${jmonkeyengineVersion}"
+    runtime "org.jmonkeyengine:jme3-jogg:${jmonkeyengineVersion}"
+    //compile "org.jmonkeyengine:jme3-jogl:${jmonkeyengineVersion}"
+    //compile "org.jmonkeyengine:jme3-networking:${jmonkeyengineVersion}"
+    //compile "org.jmonkeyengine:jme3-niftygui:${jmonkeyengineVersion}"
+    runtime "org.jmonkeyengine:jme3-plugins:${jmonkeyengineVersion}"
+    //compile "org.jmonkeyengine:jme3-terrain:${jmonkeyengineVersion}"
 
-    // select one version of LWJGL
+    // select a version of LWJGL (from jcenter or mavenLocal)
     compile "org.jmonkeyengine:jme3-lwjgl:${jmonkeyengineVersion}"
     //compile "org.jmonkeyengine:jme3-lwjgl3:${jmonkeyengineVersion}"
 
     // from stephengold's bintray repositories:
-    runtime 'org.jmonkeyengine:jme3-testdata:3.1.0-stable'
+    //runtime 'org.jmonkeyengine:jme3-testdata:3.1.0-stable'
 }
 
 // cleanup tasks
